--- a/assets/scss/_vars.scss
+++ b/assets/scss/_vars.scss
@@ -15,7 +15,7 @@ $blue:  #0074a2;
 $cyan:  #2ea2cc;
 $green: #9ebaa0;
 
-$vm_blue:   #4bf;
+$vm_blue:   #428bca;
 $vm_yellow: #f7b42c;
 $vm_green:  #aad450;
 $vm_pink:   #f27490;
