--- a/assets/scss/_overrides.scss
+++ b/assets/scss/_overrides.scss
@@ -149,7 +149,7 @@ article {
                 // @include transition(border, 0.5s);
             }
             h3 {
-                background: $blue;
+                background: $red;
                 padding-top: 20px;
                 @include transition (background-color, 0.2s);
                 @include transition (padding, 0.2s);
