--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -185,7 +185,7 @@ code, pre, .highlight {
 /* line 9, ../scss/_overrides.scss */
 body {
   overflow-x: hidden;
-  background-color: #d2322d;
+  background-color: #0074a2;
   background: url('/wp-content/themes/jn-wpbs/assets/img/bg/stripes-blue.png?1387451394') black fixed;
 }
 
