--- a/assets/scss/_overrides.scss
+++ b/assets/scss/_overrides.scss
@@ -8,7 +8,7 @@
 
 body {
     overflow-x: hidden;
-    background-color: $red;//darken($blue, 17%);
+    background-color: $blue;//darken($blue, 17%);
     @include background(image-url("bg/stripes-blue.png") #000 fixed);
 }
 article {
