--- a/assets/scss/_overrides.scss
+++ b/assets/scss/_overrides.scss
@@ -9,7 +9,7 @@
 body {
     overflow-x: hidden;
     background-color: $blue;//darken($blue, 17%);
-    @include background(image-url("bg/stripes-blue.png") #000 fixed);
+    @include background(image-url("bg/stripes.png") #000 fixed);
 }
 article {
     padding-left: 0 !important;
