--- a/assets/scss/_vars.scss
+++ b/assets/scss/_vars.scss
@@ -10,10 +10,11 @@ $section_height: 700px;
 $pad-md: 15px;
 
 /* Colors */
-$red:   #d2322d;
-$blue:  #0074a2;
-$cyan:  #2ea2cc;
-$green: #9ebaa0;
+$red:       #d2322d;
+$blue:      #0074a2;
+$cyan:      #2ea2cc;
+$green:     #5cb85c;
+$yellow:    #f0ad4e;
 
 $vm_blue:   #428bca;
 $vm_yellow: #f7b42c;
