tightened up top padding. OH YEAH. added back 'affix' top nav a few turns ago too.

--- a/assets/scss/_navbar.scss
+++ b/assets/scss/_navbar.scss
@@ -77,15 +77,14 @@
             line-height: 27px;
             @include transition(all, 0);
         }
-
-        &.active {
-            color: $red !important;
-        }
     }
 }
 .navbar-nav {
     margin: 0 0 0 -15px;
 }
+
+/* active */
+
 .navbar-inverse .navbar-nav > .active > a, 
 .navbar-inverse .navbar-nav > .active > a:hover, 
 .navbar-inverse .navbar-nav > .active > a:focus {
