--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -234,24 +234,24 @@ article {
 
 /* line 38, ../scss/_overrides.scss */
 .main-content {
-  padding-top: 80px;
+  padding-top: 100px;
 }
 @media only all and (max-width: 1199px) {
   /* line 38, ../scss/_overrides.scss */
   .main-content {
-    padding-top: 70px;
+    padding-top: 90px;
   }
 }
 @media only all and (max-width: 991px) {
   /* line 38, ../scss/_overrides.scss */
   .main-content {
-    padding-top: 60px;
+    padding-top: 80px;
   }
 }
 @media only all and (max-width: 767px) {
   /* line 38, ../scss/_overrides.scss */
   .main-content {
-    padding-top: 60px;
+    padding-top: 70px;
   }
 }
 
@@ -758,17 +758,14 @@ p {
     transition: all, 0;
   }
 }
-/* line 81, ../scss/_navbar.scss */
-.navbar a.active {
-  color: #d2322d !important;
-}
 
-/* line 86, ../scss/_navbar.scss */
+/* line 82, ../scss/_navbar.scss */
 .navbar-nav {
   margin: 0 0 0 -15px;
 }
 
-/* line 91, ../scss/_navbar.scss */
+/* active */
+/* line 90, ../scss/_navbar.scss */
 .navbar-inverse .navbar-nav > .active > a,
 .navbar-inverse .navbar-nav > .active > a:hover,
 .navbar-inverse .navbar-nav > .active > a:focus {
@@ -776,7 +773,7 @@ p {
   color: #d2322d;
 }
 
-/* line 95, ../scss/_navbar.scss */
+/* line 94, ../scss/_navbar.scss */
 .navbar-inverse {
   background-color: black;
   border: 0;
@@ -785,7 +782,7 @@ p {
   box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.5);
 }
 
-/* line 100, ../scss/_navbar.scss */
+/* line 99, ../scss/_navbar.scss */
 .navbar-collapse {
   -webkit-box-shadow: 0;
   -moz-box-shadow: 0;
@@ -793,7 +790,7 @@ p {
   border-top: 0;
 }
 
-/* line 105, ../scss/_navbar.scss */
+/* line 104, ../scss/_navbar.scss */
 #nav-row {
   height: 50px;
   background-color: #000;
@@ -802,25 +799,25 @@ p {
 }
 
 /* Nav Below */
-/* line 116, ../scss/_navbar.scss */
+/* line 115, ../scss/_navbar.scss */
 #nav-below .btn-primary {
   margin-top: 10px;
 }
 
 /* Nav Prev / Next  */
-/* line 123, ../scss/_navbar.scss */
+/* line 122, ../scss/_navbar.scss */
 .nav-previous {
   float: left;
   margin-right: 20px;
 }
 
 /* Buttons */
-/* line 130, ../scss/_navbar.scss */
+/* line 129, ../scss/_navbar.scss */
 button {
   margin-right: 10px !important;
 }
 
-/* line 133, ../scss/_navbar.scss */
+/* line 132, ../scss/_navbar.scss */
 .btn-primary {
   background-color: #d2322d;
   border-color: #d2322d;
@@ -830,7 +827,7 @@ button {
   transition: background-color, 0.5s;
 }
 
-/* line 138, ../scss/_navbar.scss */
+/* line 137, ../scss/_navbar.scss */
 .btn-primary:hover, .btn-primary:focus, .btn-primary:active, .btn-primary.active {
   background-color: #0074a2;
   border-color: #0074a2;
@@ -841,7 +838,7 @@ button {
 }
 
 /* Affix */
-/* line 145, ../scss/_navbar.scss */
+/* line 144, ../scss/_navbar.scss */
 .affix {
   top: 0;
 }
@@ -855,12 +852,12 @@ button {
       margin-top: 0;
   } */
   /* Logo */
-  /* line 159, ../scss/_navbar.scss */
+  /* line 158, ../scss/_navbar.scss */
   .navbar-brand {
     padding-left: 15px;
   }
 
-  /* line 162, ../scss/_navbar.scss */
+  /* line 161, ../scss/_navbar.scss */
   .navbar-collapse {
     background-color: #000;
   }
